--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -54,5 +54,6 @@
 
     <!-- 사용자 js 추가 -->
     <script src="/js/app/main.js"></script>
+    <script src="/js/app/draw.js"></script>
 </body>
 </html>
