real time chart

--- a/src/main/resources/templates/draw.hbs
+++ b/src/main/resources/templates/draw.hbs
@@ -79,29 +79,46 @@
     };
 
     // 차트 업데이트
-    // let timer = setInterval(function () {
-    //     console.log("refresh")
-    //     window.myLine.update();
-    // }, 1000);
+    let timer = setInterval(function () {
+        console.log("refresh")
+        $.getJSON("https://localhost:8080/xBarR",
+                function (xBarRList) {
+                    $.each(xBarRList, function (inx, obj) {
+                        chartLabels.push(obj.createTm);
+                        chartData.push(obj.valueAverage);
+                        chartDataUCL.push(ucl);
+                        chartDataCL.push(cl);
+                        chartDataLCL.push(lcl);
+                    });
+
+                    console.log("create Chart")
+                    window.xbarR.update();
+                });
+
+        window.xbarR.update();
+    }, 1000);
+
+    // let dataRefresh = setInterval(getData, 1000);
 
     window.onload = function () {
         let ctx1 = document.getElementById('canvas1').getContext('2d');
-        window.myLine = new Chart(ctx1, config);
+        window.xbarR = new Chart(ctx1, config);
     };
 
-    $.getJSON("https://localhost:8080/xBarR",
-            function (xBarRList) {
-                $.each(xBarRList, function (inx, obj) {
-                    chartLabels.push(obj.createTm);
-                    chartData.push(obj.valueAverage);
-                    chartDataUCL.push(ucl);
-                    chartDataCL.push(cl);
-                    chartDataLCL.push(lcl);
-                });
+    // $.getJSON("https://localhost:8080/xBarR",
+    //         function (xBarRList) {
+    //             $.each(xBarRList, function (inx, obj) {
+    //                 chartLabels.push(obj.createTm);
+    //                 chartData.push(obj.valueAverage);
+    //                 chartDataUCL.push(ucl);
+    //                 chartDataCL.push(cl);
+    //                 chartDataLCL.push(lcl);
+    //             });
+    //
+    //             console.log("create Chart")
+    //             window.myLine.update();
+    //         });
 
-                console.log("create Chart")
-                window.myLine.update();
-            });
 
     let lineChartData = {
         labels: chartLabels,
@@ -138,7 +155,6 @@
                 pointRadius: 0,
                 data: chartDataLCL
             }
-
         ]
     }
 
@@ -157,8 +173,8 @@
                 yAxes: [{
                     ticks: {
                         beginAtZero: true,
-                        max: ucl*1.5,
-                        min: lcl*1.5
+                        max: ucl * 1.5,
+                        min: lcl * 1.5
                     },
                     scaleLabel: {
                         display: true,
